# SurfMap

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PACKAGING_SETUP.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py  surfmap  surfmap.py
.github/workflows/: publish.yml
src/surfmap/: __init__.py  __main__.py
