[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfmap"
dynamic = ["version"]
description = "Advanced Reconnaissance & Analysis Suite for cybersecurity professionals"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Khrish", email = "khrish007.123@gmail.com"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "reconnaissance",
    "recon",
    "enumeration",
    "subdomain-enumeration",
    "attack-surface",
    "penetration-testing",
    "bug-bounty",
    "cybersecurity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: Internet",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/dev-Khrish/surfmap"
Documentation = "https://github.com/dev-Khrish/surfmap#readme"
Repository = "https://github.com/dev-Khrish/surfmap.git"
Issues = "https://github.com/dev-Khrish/surfmap/issues"

[project.scripts]
surfmap = "surfmap.__main__:main"

[tool.setuptools]
packages = ["surfmap"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "surfmap.__version__"}
